--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
             </li>
 
             <li class="navbar-item">
-              <a href="menu/a2.html" class="navbar-link" data-nav-toggler target="_blank"
-                >Kỉ Niệm </a
+              <a href="menu/history.html" class="navbar-link" data-nav-toggler target="_blank"
+                >Kỷ Yếu </a
               >
             </li>
           </ul>
